Fixed server side render flickering

--- a/static/scss/modules/base.scss
+++ b/static/scss/modules/base.scss
@@ -1,3 +1,7 @@
+.hidden {
+  opacity: 0;
+}
+
 #js-body {
   position: relative;
 
@@ -81,6 +85,7 @@ h1.title {
   position: fixed;
   text-align: right;
   top: 75px;
+  z-index: 2;
 
   span {
     display: block;
