--- a/static/scss/modules/nav.scss
+++ b/static/scss/modules/nav.scss
@@ -8,7 +8,7 @@ nav {
   position: fixed;
   top: 0;
   width: 100px;
-  z-index: 2;
+  z-index: 3;
 
   transition: width $animation-delay ease-out;
 
